fixing footer position and image stretching

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   background-image: url("/img/grey.jpg");
   background-size: cover;
   height: 100%;
+  margin-bottom: 0;
 }
 
 h1,
@@ -21,14 +22,10 @@ header h2 {
 
 footer {
   background-image: linear-gradient(#323b35, white);
-  padding: 20px 0;
+  padding: 20px 0; 
+  border: none;
 }
 
-.row-content {
-  padding: 50px 0;
-  border-bottom: 1px ridge;
-  min-height: 200px;
-}
 
 .enlarge {
   width: 75%;
@@ -108,6 +105,7 @@ ul {
 
 .images {
   height: 200px;
+  object-fit: cover;
 }
 
 .card-body {
@@ -146,11 +144,33 @@ ul {
 }
 
 p {
-  padding: 10%;
+  padding: 2.5%;
 }
 
 .center {
   margin: auto;
   width: 50%;
   padding: 10px;
+}
+
+/*---Media Queries --*/
+@media (max-width: 992px) {
+}
+
+@media (max-width: 768px) {
+  .welcome .display-4 {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .welcome {
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .welcome .display-4 {
+    font-size: 2.5rem;
+  }
 }
